<resources>
    <string name="app_name">Go Sunday</string>
    <string name="btn_scan_label">Scan!</string>
    <string name="nav_home">Home</string>
    <string name="nav_devices">Devices</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Smart Helmet</string>
    <string name="nav_header_subtitle">Safety first!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Home</string>
    <string name="label_command">Input Command</string>
    <string name="bluetooth_unavailable">Bluetooth Unavailable!</string>
    <string name="connection_failed">Connection failed!</string>
    <string name="connected">Connected!</string>
    <string name="message_send_error">Send error!</string>
    <string name="you_sent">You sent</string>
    <string name="connection_success">Connection success</string>
    <string name="connection_failed_try_again">Connection failed, please check the device and try again</string>
    <string name="connection_canceled">Connection canceled</string>
    <string name="connecting_to">Connecting to</string>
    <string name="cancel">Cancel</string>
    <string name="bluetooth_not_available">Bluetooth not available.</string>
    <string name="exit">exit</string>
    <string name="bluetooth_not_supported_error">It look like your device does not support bluetooth. This app cannot work. Sorry.</string>
    <string name="bluetooth_not_enabled_error">It look like your device has not enable bluetooth yet. Do you want to turn it on?</string>
    <string name="close">Close</string>
    <string name="discover_nearby_devices">Discover nearby devices</string>
    <string name="use_mux_mode">Use mux mode</string>
    <string name="mux_mode_description">This mode is used for communication with helmet. Mux mode means more responsive but consume more power.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="lost_connection_prompt">Lost connection with device. Do you want to try reconnecting?</string>
    <string name="authenticating">Authenticating…</string>
    <string name="pairing_with">Pairing with</string>
    <string name="key_authenticated_devices">AUTHENTICATED_DEVICES</string>
    <string name="key_last_connected_device">LAST_CONNECTED_DEVICE</string>
    <string name="title_activity_job">JobActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="KEY_USER_INFO">KEY_USER_INFO</string>
    <string name="title_activity_alert">AlertActivity</string>
    <string name="ok">OK</string>
    <string name="KEY_EMERGENCY_NUMBERS">KEY_EMERGENCY_NUMBERS</string>
    <string name="balance">Balance</string>
    <string name="compass">Compass</string>
    <string name="image">image</string>
    <string name="emergency">Emergency</string>
    <string name="rescue">Rescue</string>
    <string name="tap_and_hold_to_confirm">Tap and hold to confirm</string>
    <string name="emergency_detected">Emergency detected!</string>
    <string name="contacting_to_emergency_numbers_in">Contacting to emergency numbers in</string>
    <string name="countdown_value">10</string>
    <string name="scan_from_qr">Scan from QR</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="scan_for_devices">Scan for devices</string>
    <string name="previously_connected_devices">Previously connected devices</string>
    <string name="user_information">User information</string>
    <string name="volume_control">Volume control</string>
    <string name="status">Status</string>
    <string name="blood_type">Blood type</string>
    <string name="allergy">Allergy</string>
    <string name="emergency_contacts">Emergency contacts</string>
    <string name="manual">Manual</string>
    <string name="from_contacts">From contacts</string>
    <string name="last_connected_device">Last connected device</string>
    <string name="diagnostic">Diagnostic</string>
    <string name="diagnose">Diagnose</string>
    <string name="about">About</string>
    <string name="contact_info">Contact info</string>
    <string name="contact_name">Contact name</string>
    <string name="contact_number">Contact number</string>
    <string name="contacted_to">Contacted to</string>
    <string name="user_info">User info</string>
    <string name="title_activity_log_view">LogViewActivity</string>
    <string name="tab_text_1">Safety Log</string>
    <string name="tab_text_2">Device Log</string>
</resources>
