<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorRed"
    android:orientation="vertical"
    tools:context=".PreAlarmActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_warning"
        android:contentDescription="@string/image"
        android:tint="@color/colorWhite" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emergency_detected"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/text_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacting_to_emergency_numbers_in"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="20sp" />

    <FrameLayout
        android:id="@+id/frame_timeout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingStart="150dp"
        android:paddingTop="30dp"
        android:paddingEnd="150dp"
        android:paddingBottom="30dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:src="@drawable/thumb_normal"
            android:contentDescription="@string/image"
            android:tint="@color/colorWhite" />

        <TextView
            android:id="@+id/text_timeout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/countdown_value"
            android:textColor="@color/colorRed"
            android:textSize="60sp" />
    </FrameLayout>


    <Button
        android:id="@+id/button_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/colorWhite"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:text="@string/cancel"
        android:textColor="@color/colorRed"
        android:textSize="20sp" />

</LinearLayout>