<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!--<ImageButton-->
        <!--android:id="@+id/btn_refresh"-->
        <!--style="@style/Base.Widget.AppCompat.Button.Borderless"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignParentEnd="true"-->
        <!--android:adjustViewBounds="true"-->
        <!--android:src="@drawable/ic_refresh"-->
        <!--android:tint="@color/colorPrimary" />-->

        <Switch
            android:id="@+id/switch_discover"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:switchPadding="10sp"
            android:text="@string/discover_nearby_devices"
            android:textOff="@string/btn_scan_label"
            android:textOn="@string/ok" />

        <ProgressBar
            android:id="@+id/progress_discovery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </RelativeLayout>

    <ListView
        android:id="@+id/list_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>