<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/compass" />

        <FrameLayout
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="80dp"
            android:paddingEnd="80dp">

            <ImageView
                android:id="@+id/image_compass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/compass"
                android:src="@mipmap/compass"
                android:tint="@color/colorAccent" />
        </FrameLayout>

        <TextView
            android:id="@+id/text_angle"
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text=""
            android:textColor="@color/colorBlack" />

        <TextView
            style="@style/Footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            style="@style/Header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/balance" />

        <RelativeLayout
            android:id="@+id/frame_drop_container"
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="100dp"
            android:paddingEnd="100dp">

            <ImageView
                android:id="@+id/image_drop"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:rotation="45"
                android:src="@drawable/ic_cross" />

            <ImageView
                style="@style/TransparentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/image"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_cross"
                android:tint="@color/colorAccent" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_balance"
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            style="@style/Content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorBlack" />

        <TextView
            style="@style/Footer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <Button
            android:id="@+id/button_dismiss"
            style="Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="@color/colorAccent"
            android:padding="20dp"
            android:text="@string/close"
            android:textColor="@color/colorWhite" />


    </LinearLayout>

</ScrollView>